@@ -6,6 +6,8 @@ Phoronix Test Suite (Git)
 - pts-core: Deb/RPM build packaging improvements.
 - pts-core: Add Markdown Readme file
 - pts-core: Add hidden ?seed_accountid= option to the welcome / account creation page for custom 6 character ID
+- pts-core: Fix for session save path on Fedora when running as normal user
+- pts-core: Add a public view of test results by going to result page entry -> Result Export -> Public Viewer
 
 Phoronix Test Suite 5.6 Milestone 1
 13 January 2015
